建立取得評分js function

--- a/src/main/resources/templates/frontend/car-detail.html
+++ b/src/main/resources/templates/frontend/car-detail.html
@@ -22,7 +22,7 @@
 				台北
 				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 			</a>
-			<span class="stext-110 cl4">
+			<span th:text="${car}" class="stext-110 cl4">
 				Xpark都會型水生公園
 			</span>
 		</div>
