--- a/src/main/resources/templates/backend/comment-form.html
+++ b/src/main/resources/templates/backend/comment-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!-- <html xmlns:th="http://www.thymeleaf.org"> -->
 
 <head>
 <!-- Required meta tags -->
@@ -11,20 +11,8 @@
 <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}" href="vendors/ti-icons/css/themify-icons.css">
 <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css" >
 <link rel="shortcut icon" th:href="@{/images/favicon.png}" />
-<!-- <link rel="stylesheet" href="../../vendors/feather/feather.css"> -->
-<!-- <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css"> -->
-<!-- <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css"> -->
-<!-- endinject -->
-<!-- Plugin css for this page -->
-<!-- <link rel="stylesheet" href="../../vendors/select2/select2.min.css"> -->
-<!-- <link rel="stylesheet" href="../../vendors/select2-bootstrap-theme/select2-bootstrap.min.css"> -->
-<!-- End plugin css for this page -->
-<!-- inject:css -->
-<!-- <link rel="stylesheet" href="../../css/vertical-layout-light/style.css"> -->
 <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/@sweetalert2/theme-bootstrap-4/bootstrap-4.css}" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-bootstrap-4/bootstrap-4.css" >
 <link rel="stylesheet" th:href="@{/css/stars.css}" href="../../css/stars.css">
-<!-- endinject -->
-<!-- <link rel="shortcut icon" href="../../images/favicon.png" /> -->
 <style>
 img {
 	object-fit: cover;
