back 細部調整 add 回前頁功能

--- a/src/main/resources/templates/backend/hotel/hotelIndex.html
+++ b/src/main/resources/templates/backend/hotel/hotelIndex.html
@@ -35,7 +35,7 @@
                       <div class="col-md-12 grid-margin stretch-card">
                           <div class="card">
                               <div class="card-body">
-                                  <div class="card-title">評論列表</div>
+                                  <div class="card-title">Hotel List </div>
                                   <div class="table-responsive">
                                       <table id="comment-table" class="display expandable-table w-100">
 
