--- a/src/main/resources/templates/backend/hotel/hotelNewAdd.html
+++ b/src/main/resources/templates/backend/hotel/hotelNewAdd.html
@@ -35,7 +35,7 @@
             <div class="col-md-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <div class="card-title">註冊飯店</div>
+                <a th:href="backHotel">  <div class="card-title">回列表</div> </a>
 
                   <div class="table-responsive">
                     <div class="container col-md-5">
