--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -73,13 +73,9 @@
 
 						</h4>
 						<div class="p-b-10">
-							<div class="">
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								4.6 (56則評論)
+								<div class="rating-count" th:id="${hotel.id}" value="hotel">
+									尚無評論
+								</div>
 							</div>
 							<div class="p-t-20">
 								<i class="fa fa-map-marker" aria-hidden="true"></i>
