--- a/src/main/resources/templates/frontend/car-detail.html
+++ b/src/main/resources/templates/frontend/car-detail.html
@@ -22,8 +22,8 @@
 				台北
 				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 			</a>
-			<span th:text="${car}" class="stext-110 cl4">
-				Xpark都會型水生公園
+			<span th:text="${car.makeEn}" class="stext-110 cl4">
+				車款
 			</span>
 		</div>
 	</div>
@@ -106,13 +106,8 @@
 							Xpark都會型水生公園門票
 						</h4>
 						<div class="p-b-10">
-							<div id="rating-count">
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								<i class="fa fa-star cl1" aria-hidden="true"></i>
-								<span id="rating">4.6</span> (<span id="count">56</span>則評論)
+							<div class="rating-count" th:id="${car.id}" value="carRental">
+								尚無評論
 							</div>
 							<div class="p-t-20">
 								<i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -167,33 +162,6 @@
 								加入購物車
 							</button>
 						</div>
-
-						<!--  -->
-						<!-- <div class="flex-w flex-m p-l-100 p-t-40 respon7">
-							<div class="flex-m bor9 p-r-10 m-r-11">
-								<a href="#"
-									class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100"
-									data-tooltip="Add to Wishlist">
-									<i class="zmdi zmdi-favorite"></i>
-								</a>
-							</div>
-
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-								data-tooltip="Facebook">
-								<i class="fa fa-facebook"></i>
-							</a>
-
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-								data-tooltip="Twitter">
-								<i class="fa fa-twitter"></i>
-							</a>
-
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-								data-tooltip="Google Plus">
-								<i class="fa fa-google-plus"></i>
-							</a>
-						</div> -->
-						
 					</div>
 				</div>
 			</div>
@@ -713,32 +681,10 @@
 	<div th:replace="frontend/partials/fragment :: modal1"></div>	
 	<!-- javascript -->
 	<div th:replace="frontend/partials/fragment :: script"></div>
-	
-	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js}"></script>
-	<script th:src="@{/js/clusterMap.js}" src="js/clusterMap.js"></script>
-	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v1.0.0/mapbox-gl-language.js}"></script>
-	<script>
-	  $(document).ready(function() {
-			$.ajax({
-				url: "/gotrip/api/comments/rating",
-				method:"GET",
-				dataType:"json",
-				data: {
-					"itemTb":"ticket",
-					"itemId":31
-				},
-				success: function(data){
-					$('#rating').text(data.avgRating);
-					$('#count').text(data.count)
-				},
-				error: function(err){
-					$('#rating-count').text('尚無評論')
-				},
-			});
-	  })
 
-	</script>
-	
+	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js}"></script>
+	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v1.0.0/mapbox-gl-language.js}"></script>
+	<script th:src="@{/js/clusterMap.js}" src="js/clusterMap.js"></script>
 
 </body>
 
