--- a/src/main/resources/templates/frontend/car-location.html
+++ b/src/main/resources/templates/frontend/car-location.html
@@ -60,44 +60,51 @@
 				</div>
 				<!-- Block2 -->
 				<div class="col-sm-9">
-				<div th:each="car:${carModels}" class="m-b-30  isotope-item">
+<!-- 				<div th:each="location:${carLocations}" class="m-b-30  isotope-item"> -->
 <!-- 					<div class="block2">-->
 					
 						<div class="card d-block">
 							<div class="row ">
 								<div class="col-sm-4 ">
 								<div class="px-3 pos-relative hov-img0 card-img-left ">
-									<img th:src="@{${car.image}}" class="mt-4 pt-3" alt="IMG-CAR">
+									<img th:src="@{/data/uploadimages/car/audi-a8.jpg}" class="mt-4 pt-3" alt="IMG-CAR">
 								</div>
 								</div>
 								<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14">
 									<div class="block2-txt-child1 mb-4">
-										<p th:text="${car.type}"></p>
-										<a th:href="@{'/cars/'+${car.id}}" class="fs-20 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-											<p th:text="${car.makeCh + ' ' + car.makeEn + ' ' + car.model}" class="pr-3"></p>
+										<p th:text="${location.country +' '+ location.city +' '+ location.district}"></p>
+										<a th:href="@{'/cars/'+${location.id}}" class="fs-20 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
+											<p th:text="${location.name}" class="pr-3"></p>
 										</a>
-										<div class="rating-count" th:id="${car.id}" value="carRental">
-											尚無評論
-										</div>
-										<p class="clblack mtext-101 p-t-6 text-right">
+<!-- 										<div class="rating-count" th:id="${car.id}" value="carRental"> -->
+<!-- 											尚無評論 -->
+<!-- 										</div> -->
+<!-- 										<p class="clblack mtext-101 p-t-6 text-right"> -->
 <!-- 											TWD $<span th:text="${car.price}"></span> -->
-										</p>
+<!-- 										</p> -->
 										<i class="zmdi zmdi-flash"></i>
-										<span th:text="${car.power}" class="pr-3"></span>
-										變速 
-										<span th:text="${car.transmission}" class="pr-3"></span>
-										座位 
-										<i class="zmdi zmdi-airline-seat-recline-extra"></i>
-										<span th:text="${car.seat}" class="pr-3"></span>
-										排氣 
-										<span th:text="${car.displacement}" class="pr-3"></span>
+										
+										<span th:text="${location.carModels}" class="pr-3"></span>
+										<div th:each="model:${location.carModels}" class="m-b-30  isotope-item">
+											<span th:text="${model.makeEn}" class="pr-3"></span>
+											<span th:text="${model.model}" class="pr-3"></span>
+										
+										</div>
+										<div th:each="option:${location.carOptions}" class="m-b-30  isotope-item">
+											<span th:text="${option.price}" class="pr-3"></span>
+											<span th:text="${option.amount}" class="pr-3"></span>
+										
+										</div>
+										
+<!-- 										<span th:text="${location.model}" class="pr-3"></span> -->
+<!-- 										<span th:text="${location.seat}" class="pr-3"></span> -->
 									</div>
 
 								</div>
 							</div>
 						</div>
 <!-- 					</div> -->
-				</div>
+<!-- 				</div> -->
 
 				</div>
 			</div>
