--- a/src/main/resources/templates/frontend/car-detail.html
+++ b/src/main/resources/templates/frontend/car-detail.html
@@ -3,7 +3,7 @@
 
 <head th:replace="frontend/partials/fragment :: head"></head>
 
-<body class="animsition">
+<body class="">
 
 	<!-- Header -->
   <header th:replace="frontend/partials/fragment :: header"></header>
