--- a/src/main/resources/templates/frontend/index.html
+++ b/src/main/resources/templates/frontend/index.html
@@ -885,20 +885,17 @@
 
 			<div class="flex-w flex-sb-m p-b-15">
 				<h3 class="mtext-111 cl5 font-weight-bold p-b-10">
-					超值交通
+					超值租車
 				</h3>
 				<div class="flex-w flex-l-m filter-tope-group m-tb-10">
-					<!-- <button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" data-filter="*">
-						所有行程
-					</button> -->
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".outdoor">
-						租車自駕
+						經濟轎車
 					</button>
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".art">
-						包車服務
+						豪華轎車
 					</button>
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".family">
-						交通聯票
+						休旅車/SUV
 					</button>
 				</div>
 				<div class="flex-w flex-c-m m-tb-10">
