--- a/src/main/resources/templates/frontend/partials/fragment-index.html
+++ b/src/main/resources/templates/frontend/partials/fragment-index.html
@@ -33,12 +33,12 @@
 						<div class="container">
 							<div class="p-b-30 respon5  m-lr-auto">
 								<div class="layer-slick1 font-weight-bold">
-									<span class="mtext-111 clblack respon2">
+									<span class="mtext-111 clwhite respon2">
 										想去哪裡玩？
 									</span>
 								</div>
 								<div class="layer-slick1">
-									<h2 class="ltext-107 clblack p-t-15 p-b-25 respon1 font-weight-bold">
+									<h2 class="ltext-107 clwhite p-t-15 p-b-25 respon1 font-weight-bold">
 										立即安排下一趟完美旅程
 									</h2>
 								</div>
