--- a/src/main/resources/static/css/util.css
+++ b/src/main/resources/static/css/util.css
@@ -13,8 +13,8 @@
 body,
 html {
 	font-family: Arial, sans-serif;
-	font-size: 15px;
-	color: #666666;
+	font-size: 16px;
+/* 	color: #666666; */
 
 	height: 100%;
 	background-color: #fff;
