--- a/src/main/resources/templates/frontend/car-location.html
+++ b/src/main/resources/templates/frontend/car-location.html
@@ -3,17 +3,17 @@
 
 <head th:replace="frontend/partials/fragment :: head"></head>
 
-<body class="animsition">
+<body class="">
 	<!-- Header -->
   <header th:replace="frontend/partials/fragment :: header"></header>
 	<!-- Cart 購物車 -->
 	<div th:replace="frontend/partials/fragment :: cart"></div>
 	
 	<!-- Product 內文 -->
-	<div class="bg0 m-t-23 p-b-140">
+	<div class="bg0 m-t-60 m-b-140">
 		<div class="container">
 			
-			<div class="flex-w flex-sb-m p-b-52">
+			<div class="flex-w flex-sb-m m-b-40">
 				<h2 class="ltext-103 cl5 font-weight-bold p-b-15">租車自駕</h2>
 				<div class="flex-w flex-l-m filter-tope-group m-tb-10">
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" data-filter="*">
@@ -31,27 +31,18 @@
 				</div>
 
 				<div class="flex-w flex-c-m m-tb-5">
-					<div
-						class="flex-c-m stext-106 cl6 size-104 bor4 pointer hov-btn3 trans-04 m-r-8 m-tb-4 js-show-filter">
-						<i class="icon-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-filter-list"></i>
-						<i class="icon-close-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>
-						條件篩選
-					</div>
-
-					<div class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3 trans-04 m-tb-4 js-show-search">
-						<i class="icon-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-search"></i>
-						<i class="icon-close-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>
-						搜尋行程
-					</div>
+					<a class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3  m-tb-4"
+						th:href="@{/cars}">
+						以車款查詢
+					</a>
 				</div>
 
-				<!-- Search product -->
-				<div th:replace="frontend/partials/fragment :: search"></div>
-			
 				<!-- Filter -->
 				<div th:replace="frontend/partials/fragment :: filter"></div>
 
 			</div>
+			
+			<div id="map" style="width:100%; height: 500px;" class="mb-5"></div>
 
 			<div class="row isotope-grid">
 <!-- 			 isotope-grid  -->
@@ -60,61 +51,78 @@
 				</div>
 				<!-- Block2 -->
 				<div class="col-sm-9">
-<!-- 				<div th:each="location:${carLocations}" class="m-b-30  isotope-item"> -->
-<!-- 					<div class="block2">-->
-					
+					<div th:each="location:${carLocations}" class="m-b-30  isotope-item">
 						<div class="card d-block">
 							<div class="row ">
-								<div class="col-sm-4 ">
-								<div class="px-3 pos-relative hov-img0 card-img-left ">
-									<img th:src="@{/data/uploadimages/car/audi-a8.jpg}" class="mt-4 pt-3" alt="IMG-CAR">
-								</div>
+								<div class="col-sm-4">
+									<div class="px-3 pos-relative hov-img0 card-img-left">
+										<img th:src="@{/data/uploadimages/car/toyota-yaris.jpg}" class="mt-4 pt-3" alt="IMG-CAR">
+									</div>
 								</div>
 								<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14">
 									<div class="block2-txt-child1 mb-4">
-										<p th:text="${location.country +' '+ location.city +' '+ location.district}"></p>
-										<a th:href="@{'/cars/'+${location.id}}" class="fs-20 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-											<p th:text="${location.name}" class="pr-3"></p>
+										<div>
+											<span class="" th:text="${location.city}"></span>
+											<i class="fa fa-angle-right" aria-hidden="true"></i>
+											<span class="" th:text="${location.district}"></span>
+										</div>
+										<a th:href="@{'/cars/'+${location.id}}" class="fs-24 clblack font-weight-bold hov-cl1 trans-04 js-name-b2">
+											<p th:text="${location.name}" class="pr-3 m-tb-10"></p>
 										</a>
+										<i class="fa fa-map-marker cl3" aria-hidden="true"></i>
+										<span th:text="${location.city + location.district + location.address}"></span>
 <!-- 										<div class="rating-count" th:id="${car.id}" value="carRental"> -->
 <!-- 											尚無評論 -->
 <!-- 										</div> -->
-<!-- 										<p class="clblack mtext-101 p-t-6 text-right"> -->
-<!-- 											TWD $<span th:text="${car.price}"></span> -->
-<!-- 										</p> -->
-										<i class="zmdi zmdi-flash"></i>
+										<button class="btn btn-primary text-right" type="button" data-toggle="collapse" th:data-target="'#collapseExample'+${location.id}" aria-expanded="false" aria-controls="collapseExample">
+											<i class="fa fa-angle-down" aria-hidden="true"></i>
+										</button>
 										
-										<span th:text="${location.carModels}" class="pr-3"></span>
-										<div th:each="model:${location.carModels}" class="m-b-30  isotope-item">
-											<span th:text="${model.makeEn}" class="pr-3"></span>
-											<span th:text="${model.model}" class="pr-3"></span>
-										
-										</div>
-										<div th:each="option:${location.carOptions}" class="m-b-30  isotope-item">
-											<span th:text="${option.price}" class="pr-3"></span>
-											<span th:text="${option.amount}" class="pr-3"></span>
-										
-										</div>
-										
-<!-- 										<span th:text="${location.model}" class="pr-3"></span> -->
-<!-- 										<span th:text="${location.seat}" class="pr-3"></span> -->
 									</div>
-
+								</div>
+							</div>
+							<div class="collapse p-all-20" th:id="'collapseExample'+${location.id}">
+								<div th:each="option:${location.carOptions}" >
+									<div class="bor18">
+										<div class="row ">
+											<div class="col-sm-4 ">
+												<div class="px-3 pos-relative hov-img0 card-img-left ">
+													<img th:src="@{${option.carModel.image}}" class="mt-4 pt-3" alt="IMG-CAR">
+												</div>
+											</div>
+											<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14">
+												<div class="block2-txt-child1 mb-4">
+													<p th:text="${option.carModel.type}"></p>
+													<a th:href="@{'/cars/'+${option.carModel.id}}" class="fs-20 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
+														<p th:text="${option.carModel.makeCh + ' ' + option.carModel.makeEn + ' ' + option.carModel.model}" class="pr-3"></p>
+													</a>
+													<div class="rating-count" th:id="${option.carModel.id}" value="carRental">
+														尚無評論
+													</div>
+													<p class="clblack mtext-101 p-t-6 text-right" th:each="option:${carOptions}">
+														TWD $<span th:text="${option.price}"></span>
+													</p>
+<!-- 										<i class="zmdi zmdi-flash"></i> -->
+<!-- 										<span th:text="${car.power}" class="pr-3"></span> -->
+<!-- 										變速  -->
+<!-- 										<span th:text="${car.transmission}" class="pr-3"></span> -->
+<!-- 										座位  -->
+<!-- 										<i class="zmdi zmdi-airline-seat-recline-extra"></i> -->
+<!-- 										<span th:text="${car.seat}" class="pr-3"></span> -->
+<!-- 										排氣  -->
+<!-- 										<span th:text="${car.displacement}" class="pr-3"></span> -->
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
-<!-- 					</div> -->
-<!-- 				</div> -->
+					</div>
 
 				</div>
 			</div>
 
-			<!-- Load more -->
-			<div class="flex-c-m flex-w w-full p-t-45">
-				<a href="#" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04">
-					Load More
-				</a>
-			</div>
 		</div>
 	</div>
 
@@ -126,6 +134,10 @@
 	<div th:replace="frontend/partials/fragment :: modal1"></div>	
 	<!-- javascript -->
 	<div th:replace="frontend/partials/fragment :: script"></div>
+	
+	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js}"></script>
+	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v1.0.0/mapbox-gl-language.js}"></script>
+	<script th:src="@{/js/clusterMap.js}" src="js/clusterMap.js"></script>
 	
 </body>
 
