--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -1,22 +1,62 @@
 
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
+<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+<script th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 <head th:replace="frontend/partials/fragment :: head"></head>
+<style>
+	#mainForFirst{
+		padding-top: 2vh;
+		margin-bottom: 1vh;
+		border-radius: 15px;
+		border: 1px rgb(221,223,226) solid;
+	}
+	#mainForSecond{
+		border: 1px rgb(221,223,226) solid;
+		border-radius: 15px;
+		margin-bottom: 1vh;
+	}
+	 li{
+		display: inline;
+		padding-left: 16px;
+		padding-right: 4px;
+		padding-top: 0px;
+		padding-bottom: 0px;
+
+	}
+	 #left2{
+		 border: 1px rgb(221,223,226) solid;
+		 border-radius: 23px;
+
+	 } #right2{
+		 border: 1px rgb(221,223,226) solid;
+		 border-radius: 23px;
+
+	 }
+	.box {
+		height: 100px;
+		background-color: #69F0AE;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+
+</style>
 
 <body class="animsition">
-
+<!--最方方headbar-->
+<section>
 <!-- Header -->
 <header th:replace="frontend/partials/fragment :: header"></header>
 <!-- Cart 購物車 -->
 <div th:replace="frontend/partials/fragment :: cart"></div>
-
-
+</section>
 <tr th:each="hotel : ${roomDetail}">
 
 
 
-
+<!--第一條bar-->
 	<div class="container">
 		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-20 p-lr-0-lg">
 			<a href="/index" class="stext-110 cl8 hov-cl1 trans-04">
@@ -36,133 +76,192 @@
 
 
 	<!-- Product Detail -->
-	<section class="sec-product-detail bg0 p-t-40 p-b-45">
-		<div class="container">
+	<section class="sec-product-detail bg0 p-t-20 ">
+		<div class="container" id="mainForFirst">
 			<div class="row">
-				<!-- 地點、概述、方案選擇、商品評論(top5?)、商品說明、 -->
-				<!-- <div class="col-md-8">
-					<h3 class="mtext-111 cl5 font-weight-bold p-b-10">
-						Xpark都會型水生公園
-					</h3>
-				</div> -->
+<!--				主要內容 照片左半邊-->
+						<div class="col-md-8 col-lg-8 p-b-30">
+							<div class="p-l-25 p-r-30 p-lr-0-lg">
 
+								<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 
-
-				<div class="col-md-8 col-lg-8 p-b-30">
-					<div class="p-l-25 p-r-30 p-lr-0-lg">
-
-						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-
-							<div class="carousel-inner">
-								<div class="carousel-item active">
-									<td>  <img  th:src="@{/picture(id=${hotel.id})}" class="d-block w-100">  </td>
-								</div>
-
-							</div>
-
-						</div>
-
-
-					</div>
-				</div>
-
-				<div class="col-md-4 p-b-30">
-					<div class="p-t-5">
-						<h4 class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14">
-							<td th:text="${hotel.hotel_name}" />
-
-						</h4>
-						<div class="p-b-10">
-								<div class="rating-count" th:id="${hotel.id}" value="hotel">
-									尚無評論
-								</div>
-							</div>
-							<div class="p-t-20">
-								<i class="fa fa-map-marker" aria-hidden="true"></i>
-								<td th:text="${hotel.fullAddress}" />
-							</div>
-						</div>
-						<p class="stext-102 cl3 p-t-23">
-						<h2>該如何前往</h2>
-						<td th:text="${hotel.Howgoto}" />
-						</p>
-
-						<p class="mtext-106 cl2 p-t-30">
-							$:<td th:text="${hotel.price}" />
-
-						</p>
-						<!--  -->
-						<div class=" p-t-33">
-
-							<div class="row m-b-10">
-								<div class="col-3">
-									<p class="d-flex justify-content-center p-t-8">
-										日期
-									</p>
-								</div>
-
-								<div class="col-9 respon6-next">
-									<div class="rs1-select2 bor8 bg0">
-										<input type="date" name="date" class="form-control">
-										<div class="dropDownSelect2"></div>
-									</div>
-								</div>
-							</div>
-
-							<div class="row p-b-10">
-								<div class="col-3">
-									<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center">
-										人數
-									</p>
-								</div>
-								<div class="col-9 ">
-									<div class="wrap-num-product flex-w m-r-20 m-tb-10">
-										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-											<i class="fs-16 zmdi zmdi-minus"></i>
+									<div class="carousel-inner">
+										<div class="carousel-item active">
+											<td>  <img  th:src="@{/picture(id=${hotel.id})}" class="d-block w-100">  </td>
 										</div>
-										<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1">
-										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-											<i class="fs-16 zmdi zmdi-plus"></i>
-										</div>
+
 									</div>
 
 								</div>
+
+
 							</div>
-							<button	class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
-								加入購物車
-							</button>
 						</div>
+<!--				主要內容 右半邊-->
+						<div class="col-md-4 p-b-30">
+							<div class="p-t-5">
+								<h4 class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14">
+									<td th:text="${hotel.hotel_name}" />
 
-						<!--  -->
-						<!-- <div class="flex-w flex-m p-l-100 p-t-40 respon7">
-							<div class="flex-m bor9 p-r-10 m-r-11">
-								<a href="#"
-									class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100"
-									data-tooltip="Add to Wishlist">
-									<i class="zmdi zmdi-favorite"></i>
-								</a>
+								</h4>
+								<div class="p-b-10">
+										<div class="rating-count" th:id="${hotel.id}" value="hotel">
+											尚無評論
+										</div>
+									</div>
+									<div class="p-t-20">
+										<i class="fa fa-map-marker" aria-hidden="true"></i>
+										<td th:text="${hotel.fullAddress}" />
+									</div>
+								</div>
+								<p class="stext-102 cl3 p-t-23">
+								<h2>該如何前往</h2>
+								<td th:text="${hotel.Howgoto}" />
+								</p>
+
+								<p class="mtext-106 cl2 p-t-30">
+									$:<td th:text="${hotel.price}" />
+
+								</p>
+								<!--  -->
+								<div class=" p-t-33">
+
+									<div class="row m-b-10">
+										<div class="col-3">
+											<p class="d-flex justify-content-center p-t-8">
+												日期
+											</p>
+										</div>
+
+										<div class="col-9 respon6-next">
+											<div class="rs1-select2 bor8 bg0">
+												<input type="date" name="date" class="form-control">
+												<div class="dropDownSelect2"></div>
+											</div>
+										</div>
+									</div>
+
+									<div class="row p-b-10">
+										<div class="col-3">
+											<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center">
+												人數
+											</p>
+										</div>
+										<div class="col-9 ">
+											<div class="wrap-num-product flex-w m-r-20 m-tb-10">
+												<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+													<i class="fs-16 zmdi zmdi-minus"></i>
+												</div>
+												<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1">
+												<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+													<i class="fs-16 zmdi zmdi-plus"></i>
+												</div>
+											</div>
+
+										</div>
+									</div>
+									<button	class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
+										加入購物車
+									</button>
+								</div>
+
+								<!--  -->
+								<!-- <div class="flex-w flex-m p-l-100 p-t-40 respon7">
+									<div class="flex-m bor9 p-r-10 m-r-11">
+										<a href="#"
+											class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100"
+											data-tooltip="Add to Wishlist">
+											<i class="zmdi zmdi-favorite"></i>
+										</a>
+									</div>
+
+									<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
+										data-tooltip="Facebook">
+										<i class="fa fa-facebook"></i>
+									</a>
+
+									<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
+										data-tooltip="Twitter">
+										<i class="fa fa-twitter"></i>
+									</a>
+
+									<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
+										data-tooltip="Google Plus">
+										<i class="fa fa-google-plus"></i>
+									</a>
+								</div> -->
+
 							</div>
 
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-								data-tooltip="Facebook">
-								<i class="fa fa-facebook"></i>
-							</a>
 
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-								data-tooltip="Twitter">
-								<i class="fa fa-twitter"></i>
-							</a>
 
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-								data-tooltip="Google Plus">
-								<i class="fa fa-google-plus"></i>
-							</a>
-						</div> -->
-
-					</div>
 				</div>
 			</div>
+	</section>
 
+
+<!--		第二主要內容 簡介-->
+	<div class="container" id="mainForSecond">
+			<div class="row" >
+				<ul >
+					<li>簡介</li>
+					<li>房型</li>
+					<li>設施與服務</li>
+					<li>住宿評鑑</li>
+					<li>地點</li>
+					<li>地點</li>
+				</ul>
+			</div>
+		</div>
+
+
+
+<!--			第三主要內容-->
+		<div class="container">
+			<div class="row gx-5">
+				<!--				中間主要內容 左半邊-->
+				<div class="col-8"  id="left2" >
+					<h1>這裡放飯店名稱</h1>
+					<h1>這裡放飯店名稱</h1>
+					<h1>這裡放飯店名稱</h1>
+
+				</div>
+				<!--				中間主要內容 右半邊-->
+
+				<div class="col-4" id="right2" >
+					<h1>這裡放評論</h1>
+					<h1>這裡放評論</h1>
+					<h1>這裡放評論</h1>
+				</div>
+
+			</div>
+		</div>
+
+	<div class="container">
+		<div class="row g-1">
+			<div class="col-8">
+				<div class="p-3 border bg-light">Custom column padding</div>
+			</div>
+			<div class="col-4">
+				<div class="p-3 border bg-light">Custom column padding</div>
+			</div>
+			<div class="col-3">
+				<div class="p-3 border bg-light">Custom column padding</div>
+			</div>
+			<div class="col-9">
+				<div class="p-3 border bg-light">Custom column padding</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+<!--			主要內容下方第一條-->
 			<div class="bor10 m-t-50 p-t-43 p-b-40">
 				<!-- Tab01 -->
 				<div class="tab01">
@@ -343,7 +442,7 @@
 				</div>
 			</div>
 		</div>
-
+<!--				主要內容第二條-->
 		<div class="bg6 flex-c-m flex-w size-302 m-t-73 p-tb-15">
 			<span class="stext-107 cl6 p-lr-25">
 				SKU: JAK-01
@@ -353,7 +452,9 @@
 				Categories: Jacket, Men
 			</span>
 		</div>
-	</section>
+
+
+
 
 
 	<!-- Related Products -->
