--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -33,13 +33,18 @@
 		 border-radius: 23px;
 
 	 }
-	.box {
-		height: 100px;
-		background-color: #69F0AE;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+	#for-second-hight{
+		padding: 3vh 0vh 3vh 1vh;
 	}
+	#cheaproom{
+		background: orange;
+		width: 240px;
+		font-size: 20px;
+		border-radius: 15px;
+		color: white;
+	}
+
+	
 
 
 </style>
@@ -202,15 +207,21 @@
 
 <!--		第二主要內容 簡介-->
 	<div class="container" id="mainForSecond">
-			<div class="row" >
-				<ul >
-					<li>簡介</li>
-					<li>房型</li>
-					<li>設施與服務</li>
-					<li>住宿評鑑</li>
-					<li>地點</li>
-					<li>地點</li>
-				</ul>
+			<div class="row" id="for-second-hight">
+				<div class="col-md-8">
+					<ul >
+						<li>簡介</li>
+						<li>房型</li>
+						<li>設施與服務</li>
+						<li>住宿評鑑</li>
+						<li>地點</li>
+						<li>地點</li>
+					</ul>
+				</div>
+
+				<div class="col-md-4 text-right" style="display: flex" >
+					  <button id="cheaproom" href="www.google.com">查看本間最特別房型</button>
+				</div>
 			</div>
 		</div>
 
