--- a/src/main/resources/templates/backend/partials/fragment.html
+++ b/src/main/resources/templates/backend/partials/fragment.html
@@ -265,7 +265,7 @@
       <nav th:fragment="sidebar" class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/members/list}">
+            <a class="nav-link" th:href="@{/user/list}">
               <i class="icon-head menu-icon"></i>
               <span class="menu-title">會員管理</span>
             </a>
