--- a/src/main/resources/templates/frontend/login.html
+++ b/src/main/resources/templates/frontend/login.html
@@ -20,66 +20,88 @@
 </head>
 
 <body>
-  <div class="container-scroller">
-    <div class="container-fluid page-body-wrapper full-page-wrapper">
-      <div class="content-wrapper d-flex align-items-center auth px-0">
-        <div class="row w-100 mx-0">
-          <div class="col-lg-4 mx-auto">
-            <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-              <div class="brand-logo">
-                <img src="../../images/logo.svg" alt="logo">
-              </div>
-              <h4>Hello! let's get started</h4>
-              <h6 class="font-weight-light">Sign in to continue.</h6>
-              <form class="pt-3">
-                <div class="form-group">
-                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">
+      <main>
+        <h1>會員登入</h1>
+        <form id=loginForm method="POST" th:action="@{/login}" th:Object="${userAccount}" enctype="multipart/form-data" autocomplete="off">
+        	<input type="hidden" id="MESSAGE" th:value="${MESSAGE}"/>
+            <section class="form-input">
+                <label>帳號/Email</label>
+                <div class="input-area">
+                    <div class="input-img"><img th:src="@{/images/userAccount/person.png}"></div>
+                    <input type="text" th:field="*{email}" placeholder="請輸入您的Email"/>
                 </div>
-                <div class="form-group">
-                  <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+            </section>
+            <section class="form-input">
+                <label>密碼</label>
+                <div class="input-area">
+                    <div class="input-img"><img th:src="@{/images/userAccount/lock.png}"></div>
+                    <input type="password" th:field="*{password}" maxlength="16" placeholder="請輸入您的密碼"/>
                 </div>
-                <div class="mt-3">
-                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">SIGN IN</a>
-                </div>
-                <div class="my-2 d-flex justify-content-between align-items-center">
-                  <div class="form-check">
-                    <label class="form-check-label text-muted">
-                      <input type="checkbox" class="form-check-input">
-                      Keep me signed in
-                    </label>
-                  </div>
-                  <a href="#" class="auth-link text-black">Forgot password?</a>
-                </div>
-                <div class="mb-2">
-                  <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-                    <i class="ti-facebook mr-2"></i>Connect using facebook
-                  </button>
-                </div>
-                <div class="text-center mt-4 font-weight-light">
-                  Don't have an account? <a href="register.html" class="text-primary">Create</a>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- content-wrapper ends -->
-    </div>
-    <!-- page-body-wrapper ends -->
-  </div>
+            </section>
+            <button>登入</button>
+            <span>還不是會員嗎?<a th:href="@{/register}">立即加入</a></span>
+        </form>
+    </main>
   <!-- container-scroller -->
   <!-- plugins:js -->
   <script src="../../vendors/js/vendor.bundle.base.js"></script>
+<!--   <script src="/lib/jquery.min.js"></script> -->
+<!--   <script src="/lib/jquery.plugin.js"></script> -->
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <!-- End plugin js for this page -->
   <!-- inject:js -->
-  <script src="../../js/off-canvas.js"></script>
-  <script src="../../js/hoverable-collapse.js"></script>
-  <script src="../../js/template.js"></script>
-  <script src="../../js/settings.js"></script>
-  <script src="../../js/todolist.js"></script>
+  <script th:src="@{/js/jquery-3.6.0.js}"></script>
+  <script th:src="@{/js/off-canvas.js}"></script>
+  <script th:src="@{/js/hoverable-collapse.js}"></script>
+  <script th:src="@{/js/template.js}"></script>
+  <script th:src="@{/js/settings.js}"></script>
+  <script th:src="@{/js/todolist.js}"></script>
+  <script th:src="@{/js/loginJS/lib/jquery-3.4.1.js}"></script>
+  <script th:src="@{/js/loginJS/common.js}"></script>
+  <script th:src="@{/js/loginJS/validation.js}"></script>
+  <script th:src="@{/js/loginJS/login.js}"></script>
   <!-- endinject -->
 </body>
+
+
+
+
+
+
+<!-- <head> -->
+<!--     <meta charset="UTF-8"> -->
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+<!--     <title>會員登入</title> -->
+<!--     <head th:insert="load/css :: css"></head> -->
+<!--     <link rel="stylesheet" th:href="@{/css/login.css}"> -->
+<!-- </head> -->
+<!-- <body> -->
+<!--     <main> -->
+<!--         <h1>會員登入</h1> -->
+<!--         <form id=loginForm method="POST" th:action="@{/login}" th:Object="${userAccount}" enctype="multipart/form-data" autocomplete="off"> -->
+<!--         	<input type="hidden" id="MESSAGE" th:value="${MESSAGE}"/> -->
+<!--             <section class="form-input"> -->
+<!--                 <label>帳號/Email</label> -->
+<!--                 <div class="input-area"> -->
+<!--                     <div class="input-img"><img th:src="@{/images/userAccount/person.png}"></div> -->
+<!--                     <input type="text" th:field="*{email}" placeholder="請輸入您的Email"/> -->
+<!--                 </div> -->
+<!--             </section> -->
+<!--             <section class="form-input"> -->
+<!--                 <label>密碼</label> -->
+<!--                 <div class="input-area"> -->
+<!--                     <div class="input-img"><img th:src="@{/images/userAccount/lock.png}"></div> -->
+<!--                     <input type="password" th:field="*{password}" maxlength="16" placeholder="請輸入您的密碼"/> -->
+<!--                 </div> -->
+<!--             </section> -->
+<!--             <button>登入</button> -->
+<!--             <span>還不是會員嗎?<a th:href="@{/register}">立即加入</a></span> -->
+<!--         </form> -->
+<!--     </main> -->
+
+<!--     <script th:replace="load/js :: js"></script> -->
+<!--     <script th:src="@{/js/login.js}"></script> -->
+<!-- </body> -->
 
 </html>
