--- a/src/main/resources/templates/frontend/register.html
+++ b/src/main/resources/templates/frontend/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -20,73 +20,113 @@
 </head>
 
 <body>
-  <div class="container-scroller">
-    <div class="container-fluid page-body-wrapper full-page-wrapper">
-      <div class="content-wrapper d-flex align-items-center auth px-0">
-        <div class="row w-100 mx-0">
-          <div class="col-lg-4 mx-auto">
-            <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-              <div class="brand-logo">
-                <img src="../../images/logo.svg" alt="logo">
-              </div>
-              <h4>New here?</h4>
-              <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
-              <form class="pt-3">
-                <div class="form-group">
-                  <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
+  <main>
+        <h1>加入會員</h1>
+        <form id="registerForm" method="POST" th:action="@{/register}" th:Object="${userAccountVO}" enctype="multipart/form-data" autocomplete="off">
+            <section class="form-input">
+                <label>姓名</label>
+                <div class="input-area">
+                    <div class="input-img"><img th:src="@{/images/userAccount/face.png}"></div>
+                    <input type="text" th:field="*{ch_name}" placeholder="請輸入您的中文姓名"/>
                 </div>
-                <div class="form-group">
-                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
+            </section>
+            <section class="form-input">
+                <label>帳號/Email</label>
+                <div class="input-area">
+                    <div class="input-img"><img th:src="@{/images/userAccount/person.png}"></div>
+                    <input type="text" th:field="*{email}" placeholder="請輸入您的Email"/>
                 </div>
-                <div class="form-group">
-                  <select class="form-control form-control-lg" id="exampleFormControlSelect2">
-                    <option>Country</option>
-                    <option>United States of America</option>
-                    <option>United Kingdom</option>
-                    <option>India</option>
-                    <option>Germany</option>
-                    <option>Argentina</option>
-                  </select>
+            </section>
+            <section class="form-input">
+                <label>密碼</label>
+                <div class="input-area">
+                    <div class="input-img"><img th:src="@{/images/userAccount/lock.png}"></div>
+                    <input type="password" th:field="*{password}" maxlength="16" placeholder="請輸入您的密碼"/>
                 </div>
-                <div class="form-group">
-                  <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="mb-4">
-                  <div class="form-check">
-                    <label class="form-check-label text-muted">
-                      <input type="checkbox" class="form-check-input">
-                      I agree to all Terms & Conditions
-                    </label>
-                  </div>
-                </div>
-                <div class="mt-3">
-                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">SIGN UP</a>
-                </div>
-                <div class="text-center mt-4 font-weight-light">
-                  Already have an account? <a href="login.html" class="text-primary">Login</a>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- content-wrapper ends -->
-    </div>
-    <!-- page-body-wrapper ends -->
-  </div>
+            </section>
+<!--             <section class="form-input"> -->
+<!--                 <label>再次輸入密碼</label> -->
+<!--                 <div class="input-area"> -->
+<!--                     <div class="input-img"><img th:src="@{/images/userAccount/lock.png}"></div> -->
+<!--                     <input type="password" th:field="*{checkPassword}" maxlength="16" placeholder="請再次輸入您的密碼"/> -->
+<!--                 </div> -->
+<!--             </section> -->
+            <button>註冊</button>
+            <span>已經是會員了嗎?<a th:href="@{/login}">立即登入</a></span>
+        </form>
+    </main>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <script src="../../vendors/js/vendor.bundle.base.js"></script>
+  <script src="/vendors/js/vendor.bundle.base.js"></script>
+<!--   <script src="/lib/jquery.min.js"></script> -->
+<!--   <script src="/lib/jquery.plugin.js"></script> -->
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <!-- End plugin js for this page -->
   <!-- inject:js -->
-  <script src="../../js/off-canvas.js"></script>
-  <script src="../../js/hoverable-collapse.js"></script>
-  <script src="../../js/template.js"></script>
-  <script src="../../js/settings.js"></script>
-  <script src="../../js/todolist.js"></script>
+  
+  <script th:src="@{/js/jquery-3.6.0.js}"></script>
+  <script th:src="@{/js/off-canvas.js}"></script>
+  <script th:src="@{/js/hoverable-collapse.js}"></script>
+  <script th:src="@{/js/template.js}"></script>
+  <script th:src="@{/js/settings.js}"></script>
+  <script th:src="@{/js/todolist.js}"></script>
+  <script th:src="@{/js/loginJS/lib/jquery-3.4.1.js}"></script>
+  <script th:src="@{/js/loginJS/common.js}"></script>
+  <script th:src="@{/js/loginJS/validation.js}"></script>
+  <script th:src="@{/js/loginJS/register.js}"></script>
   <!-- endinject -->
 </body>
+
+
+
+
+<!-- <head> -->
+<!--     <meta charset="UTF-8"> -->
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+<!--     <title>加入會員</title> -->
+<!--     <head th:insert="load/css :: css"></head> -->
+<!--     <link rel="stylesheet" th:href="@{/css/register.css}"> -->
+<!-- </head> -->
+<!-- <body> -->
+<!--     <main> -->
+<!--         <h1>加入會員</h1> -->
+<!--         <form id="registerForm" method="POST" th:action="@{/register}" th:Object="${userAccountVO}" enctype="multipart/form-data" autocomplete="off"> -->
+<!--             <section class="form-input"> -->
+<!--                 <label>姓名</label> -->
+<!--                 <div class="input-area"> -->
+<!--                     <div class="input-img"><img th:src="@{/images/userAccount/face.png}"></div> -->
+<!--                     <input type="text" th:field="*{ch_name}" placeholder="請輸入您的中文姓名"/> -->
+<!--                 </div> -->
+<!--             </section> -->
+<!--             <section class="form-input"> -->
+<!--                 <label>帳號/Email</label> -->
+<!--                 <div class="input-area"> -->
+<!--                     <div class="input-img"><img th:src="@{/images/userAccount/person.png}"></div> -->
+<!--                     <input type="text" th:field="*{email}" placeholder="請輸入您的Email"/> -->
+<!--                 </div> -->
+<!--             </section> -->
+<!--             <section class="form-input"> -->
+<!--                 <label>密碼</label> -->
+<!--                 <div class="input-area"> -->
+<!--                     <div class="input-img"><img th:src="@{/images/userAccount/lock.png}"></div> -->
+<!--                     <input type="password" th:field="*{password}" maxlength="16" placeholder="請輸入您的密碼"/> -->
+<!--                 </div> -->
+<!--             </section> -->
+<!--             <section class="form-input"> -->
+<!--                 <label>再次輸入密碼</label> -->
+<!--                 <div class="input-area"> -->
+<!--                     <div class="input-img"><img th:src="@{/images/userAccount/lock.png}"></div> -->
+<!--                     <input type="password" th:field="*{checkPassword}" maxlength="16" placeholder="請再次輸入您的密碼"/> -->
+<!--                 </div> -->
+<!--             </section> -->
+<!--             <button>註冊</button> -->
+<!--             <span>已經是會員了嗎?<a th:href="@{/login}">立即登入</a></span> -->
+<!--         </form> -->
+<!--     </main> -->
+    
+<!--     <script th:replace="load/js :: js"></script> -->
+<!--     <script th:src="@{/js/register.js}"></script> -->
+<!-- </body> -->
 
 </html>
