--- a/src/main/resources/templates/backend/car-form.html
+++ b/src/main/resources/templates/backend/car-form.html
@@ -134,9 +134,9 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="form-group row">
-													<label class="col-sm-3 col-form-label" for="displacement">引擎排氣量</label>
+													<label class="col-sm-3 col-form-label" for="engine">引擎排氣量</label>
 													<div class="col-sm-9">
-														<input th:field="*{displacement}" id="displacement" type="number" class="form-control" min="1" />
+														<input th:field="*{engine}" id="engine" type="number" class="form-control" min="1" />
 														<div class="invalid-feedback">請輸入引擎排氣量</div>
 													</div>
 												</div>
