--- a/src/main/resources/templates/backend/car-list.html
+++ b/src/main/resources/templates/backend/car-list.html
@@ -77,7 +77,7 @@
                           <td th:text="${car.model}"></td>
                           <td th:text="${car.power}"></td>
                           <td th:text="${car.transmission}"></td>
-                          <td th:text="${car.displacement}"></td>
+                          <td th:text="${car.engine}"></td>
                           <td>
                           	<img th:src="@{${car.image}}" class="rounded img-com"/>
                           </td>
