--- a/src/main/resources/templates/frontend/car-location-form.html
+++ b/src/main/resources/templates/frontend/car-location-form.html
@@ -43,166 +43,263 @@
 										新增車款
 									</a>
 								</li>
-								<li class="bor18">
-									<a href="#" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
-										DIY & Crafts
-									</a>
-								</li>
 							</ul>
 						</div>
 					</div>
 				</div>
 				<!-- Block2 -->
-				<div class="col-md-9 grid-margin my-5">
+				<div class="col-md-9 grid-margin my-5 pl-5">
 					<div class="card">
-						<div class="card-body">
-							<h4 class="card-title">新增租車據點</h4>
-							<form id="insertForm" name="form" th:action="@{/backend/cars/}"	method="post" th:object="${location}"
+						<div class="card-body ">
+							<h4 class="card-title font-weight-bold">新增租車據點</h4>
+							<form id="insertForm" name="form" th:action="@{/cars/locations}" method="post" th:object="${carLocation}"
 								  class="form-horizontal needs-validation" enctype="multipart/form-data">
-								<p class="card-description mt-5">地點資料</p>
-								<div class="row mt-4">
+								  
+								<p class="card-description mt-4">據點資料</p>
+								<input th:field="*{id}" id="number" type="hidden"/>
+								<div class="row form-group my-4">
+									<div class="col-lg-1"></div>
 									<input th:field="*{id}" id="id" type="hidden" class="form-control" placeholder="" />
-									<div class="col-md-6">
-										<div class="form-group row">
-											<label class="col-sm-3 col-form-label" for="companyId">公司編號</label>
-											<div class="col-sm-9">
-												<input th:field="*{companyId}" id="companyId" type="text" class="form-control" />
-												<div class="invalid-feedback">請輸入公司編號</div>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group row">
-											<label class="col-sm-3 col-form-label" for="name">地點名稱</label>
-											<div class="col-sm-9">
-												<input th:field="*{name}" id="name" type="text" class="form-control" />
-												<div class="invalid-feedback">請輸入地點名稱</div>
-											</div>
-										</div>
+									<label class="col-lg-2 col-form-label" for="name">據點名稱</label>
+									<div class="col-lg-6">
+										<input th:field="*{name}" id="name" type="text" class="form-control" />
+										<div class="invalid-feedback">請輸入據點名稱</div>
 									</div>
 								</div>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group row">
-											<label class="col-sm-3 col-form-label" for="city">縣市行政區</label>
-											<div class="col-sm-9">
-												<div  role="tw-city-selector" data-bootstrap-style data-has-zipcode></div>
-											
+								
+								<div class="row form-group my-4">
+									<div class="col-lg-1"></div>
+									<label class="col-lg-2 col-form-label" for="county">縣市行政區</label>
+									<div class="col-lg-6">
+										<div class="city-selector-set row" >
+											<div class="col-4 pr-0">
+												<select class="county form-control" th:field="*{county}"></select>
 											</div>
-<!-- 											<div class="col-sm-9 city-selector-set" data-bootstrap-style> -->
-<!-- 											    <select th:field="*{city}" class="county"></select> -->
-<!-- 											    <select th:field="*{district}" class="district"></select> -->
-											    <!-- 郵遞區號欄位 (建議加入 readonly 屬性，防止修改) -->
-<!-- 											    <input class="zipcode" type="text" size="3" readonly placeholder="郵遞區號"> -->
+											<div class="col-4 pr-0">
+												<select class="district form-control" th:field="*{district}"></select>
+											</div>
+											<div class="col-4">
+												<input class="zipcode form-control" type="text" size="3" readonly placeholder="郵遞區號">
+											</div>
+										</div>
+									</div>
+									<div class="invalid-feedback">請選擇車款類別</div>
+								</div>
+								
+								<div class="row form-group my-4">
+									<div class="col-lg-1"></div>
+									<label class="col-lg-2 col-form-label" for="address">地址</label>
+									<div class="col-lg-6">
+										<input th:field="*{address}" id="address" type="text" class="form-control" />
+										<div class="invalid-feedback">請輸入地址</div>
+									</div>
+								</div>
+								
+								<div class="row form-group my-4">
+									<div class="col-lg-1"></div>
+									<label class="col-lg-2 col-form-label" for="phone">連絡電話</label>
+									<div class="col-lg-6">
+										<input th:field="*{phone}" id="phone" type="text" class="form-control" placeholder="02-1234-5678"/>
+										<div class="invalid-feedback">請輸入正確的電話格式</div>
+									</div>
+								</div>
+								<div class="row form-group my-4">
+									<div class="col-lg-1"></div>
+									<label class="col-lg-2 col-form-label" for="">營業時間</label>
+									<label class="col-lg-2 col-form-label" for="openTime">開始營業</label>
+									<div class="col-lg-4 mr-5">
+										<input th:field="*{openTime}" id="openTime" type="time" class="form-control"/>
+										<div class="invalid-feedback">請輸入營業時間</div>
+									</div>
+								</div>
+								<div class="row form-group my-4">
+									<div class="col-lg-3"></div>
+									<label class="col-lg-2 col-form-label" for="closeTime">結束營業</label>
+									<div class="col-lg-4">
+										<input th:field="*{closeTime}" id="closeTime" type="time" class="form-control"/>
+										<div class="invalid-feedback">請輸入營業時間</div>
+									</div>
+								</div>
+								
+								<p class="card-description mt-5">車款上架</p>
+
+<!-- 								<div class="row form-group my-4"> -->
+<!-- 									<div class="col-lg-1"></div> -->
+<!-- 									<label class="col-lg-2 col-form-label" for="engine">選擇車款</label> -->
+<!-- 									<div class="col-lg-6"> -->
+<!-- 										<select id="carModel" name="carModel" class="form-control"> -->
+<!-- 											<option value="">常用車款</option> -->
+<!-- 											<option th:each="existModel : ${existModels}" th:value="${existModel.id}" th:text="${existModel.makeEn}+' '+${existModel.model}"></option> -->
+<!-- 										</select> -->
+<!-- 										<div class="invalid-feedback">請選擇車款</div> -->
+<!-- 									</div> -->
+<!-- 									<a href="">找不到車款?</a> -->
+<!-- 								</div> -->
+								
+								
+								
+<!-- 								<table> -->
+<!-- 								  <thead> -->
+<!-- 								    <tr> -->
+<!-- 								      <th>Row</th> -->
+<!-- 								      <th>Variety</th> -->
+<!-- 								      <th>Seeds per cell</th> -->
+<!-- 								      <th> -->
+<!-- 								        <button type="submit" name="addRow" th:text="#{carLocation.carOption.add}">Add row</button> -->
+<!-- 								      </th> -->
+<!-- 								    </tr> -->
+<!-- 								  </thead> -->
+<!-- 								  <tbody> -->
+<!-- 								    <tr th:each="option, optionStat : *{carOptions}"> -->
+<!-- 								      <td> -->
+<!-- 								      <input type="text" th:field="*{carOptions[__${optionStat.index}__].carModel}" /> -->
+<!-- 								      <input type="text" th:field="*{carOptions[__${optionStat.index}__].carLocation}" /> -->
+<!-- 										</td> -->
+<!-- 								      <td> -->
+<!-- 								      	<input type="text" th:field="*{carOptions[__${optionStat.index}__].price}" /> -->
+								      
+<!-- 								        <select th:field="*{rows[__${rowStat.index}__].variety}"> -->
+<!-- 								          <option th:each="var : ${allVarieties}"  -->
+<!-- 								                  th:value="${var.id}"  -->
+<!-- 								                  th:text="${var.name}">Thymus Thymi</option> -->
+<!-- 								        </select> -->
+<!-- 								      </td> -->
+<!-- 								      <td> -->
+<!-- 								        <input type="text" th:field="*{carOptions[__${optionStat.index}__].price}" /> -->
+<!-- 								        <input type="text" th:field="*{carOptions[__${optionStat.index}__].discount}" /> -->
+<!-- <!-- 								        <input type="text" th:field="*{option.price}" /> --> -->
+<!-- 								      </td> -->
+<!-- 								      <td> -->
+<!-- 								        <button type="submit" name="removeRow">Remove row</button> -->
+<!-- 								      </td> -->
+<!-- 								    </tr> -->
+<!-- 								  </tbody> -->
+<!-- 								</table> -->
+								
+								
+								
+								
+<!-- 								<div id="test" th:text="${carOptions}"></div> -->
+<!-- 								<div th:each="option : *{carOptions}" > -->
+<!-- 									<div id="test2" th:text="${option.price}"></div> -->
+<!-- 									<div class="col-lg-1"></div> -->
+<!-- 									<div class="row mt-4"> -->
+<!-- 									<p th:text="${option.id}"></p> -->
+<!-- 										<input th:text="${option.id}" id="id" type="hidden" class="form-control" placeholder="" /> -->
+<!-- 										<div class="col-md-5"> -->
+<!-- 											<div class="form-group row"> -->
+<!-- 												<label class="col-md-4 col-form-label" for="makeCh">廠牌（中文）</label> -->
+<!-- 												<div class="col-md-8"> -->
+<!-- 													<input th:field="*{option.carModel.makeCh}" id="makeCh" type="text" class="form-control" /> -->
+<!-- 													<div class="invalid-feedback">請輸入車款廠牌</div> -->
+<!-- 												</div> -->
 <!-- 											</div> -->
-											<div class="invalid-feedback">請選擇車款類別</div>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group row">
-											<label class="col-sm-3 col-form-label" for="address">地址</label>
-											<div class="col-sm-9">
-												<input th:field="*{address}" id="address" type="text" class="form-control" />
-												<div class="invalid-feedback">請輸入地址</div>
-											</div>
-											
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group row">
-											<label class="col-sm-3 col-form-label" for="phone">連絡電話</label>
-											<div class="col-sm-9">
-												<input th:field="*{phone}" id="phone" type="text" class="form-control" placeholder="02-1234-5678"/>
-												<div class="invalid-feedback">請輸入正確的電話格式</div>
-											</div>
-										</div>
-									</div>
-								</div>
-<!-- 								<div class="row"> -->
-<!-- 									<div class="col-md-6"> -->
-<!-- 										<div class="form-group row"> -->
-<!-- 											<label class="col-sm-3 col-form-label" for="displacement">引擎排氣量</label> -->
-<!-- 											<div class="col-sm-9"> -->
-<!-- 												<input th:field="*{displacement}" id="displacement" type="number" class="form-control" min="1" /> -->
-<!-- 												<div class="invalid-feedback">請輸入引擎排氣量</div> -->
+<!-- 										</div> -->
+<!-- 										<div class="col-md-5"> -->
+<!-- 											<div class="form-group row"> -->
+<!-- 												<label class="col-md-4 col-form-label" for="type">車款類別</label> -->
+<!-- 												<div class="col-md-8"> -->
+<!-- 													<select th:field="*{option.carModel.type}" id="type" name="type" class="form-control "> -->
+<!-- 														<option value="經濟轎車">經濟轎車</option> -->
+<!-- 														<option value="豪華轎車">豪華轎車</option> -->
+<!-- 														<option value="休旅車">休旅車/SUV</option> -->
+<!-- 													</select> -->
+<!-- 													<div class="invalid-feedback">請選擇車款類別</div> -->
+<!-- 												</div> -->
 <!-- 											</div> -->
 <!-- 										</div> -->
 <!-- 									</div> -->
-<!-- 								</div> -->
-										
-<!-- 										<p class="card-description mt-4">其他資訊</p> -->
-<!-- 										<div class="row"> -->
-<!-- 											<div class="col-md-6"> -->
+<!-- 									<div class="row"> -->
+<!-- 											<div class="col-md-5"> -->
 <!-- 												<div class="form-group row"> -->
-<!-- 													<label class="col-sm-3 col-form-label" for="suitcase">大型行李數</label> -->
+<!-- 													<label class="col-sm-3 col-form-label" for="makeEn">廠牌（英文）</label> -->
 <!-- 													<div class="col-sm-9"> -->
-<!-- 														<input th:field="*{suitcase}" id="suitcase" type="number" class="form-control" min="1" /> -->
+<!-- 														<input th:field="*{option.carModel.makeEn}" id="makeEn" type="text" class="form-control" /> -->
+<!-- 														<div class="invalid-feedback">請輸入車款廠牌</div> -->
 <!-- 													</div> -->
 <!-- 												</div> -->
 <!-- 											</div> -->
 <!-- 											<div class="col-md-6"> -->
 <!-- 												<div class="form-group row"> -->
-<!-- 													<label class="col-sm-3 col-form-label" for="bag">小型行李數</label> -->
+<!-- 													<label class="col-sm-3 col-form-label" for="model">車款</label> -->
 <!-- 													<div class="col-sm-9"> -->
-<!-- 														<input th:field="*{bag}" id="bag" type="number" class="form-control" min="1" /> -->
-<!-- 													</div> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-<!-- 										</div> -->
-<!-- 										<div class="row"> -->
-<!-- 											<div class="col-md-6"> -->
-<!-- 												<div class="form-group row"> -->
-<!-- 													<label class="col-sm-3 col-form-label" for="seat">座位數</label> -->
-<!-- 													<div class="col-sm-9"> -->
-<!-- 														<input th:field="*{seat}" id="seat" type="number" class="form-control" min="1" /> -->
-<!-- 													</div> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-<!-- 											<div class="col-md-6"> -->
-<!-- 												<div class="form-group row"> -->
-<!-- 													<label class="col-sm-3 col-form-label" for="door">車門數</label> -->
-<!-- 													<div class="col-sm-9"> -->
-<!-- 														<input th:field="*{door}" id="door" type="number" class="form-control" min="1" /> -->
+<!-- 														<input th:field="*{option.carModel.model}" id="model" type="text" class="form-control" /> -->
+<!-- 														<div class="invalid-feedback">請輸入車款</div> -->
 <!-- 													</div> -->
 <!-- 												</div> -->
 <!-- 											</div> -->
 <!-- 										</div> -->
 <!-- 										<div class="row"> -->
 <!-- 											<div class="col-md-6"> -->
-<!-- 												<div class="form-group row mt-5 justify-content-end"> -->
-<!-- 													<div class="col-sm-3"> -->
-<!-- 														<label for="images" class="col-form-label pb-1">上傳照片</label> -->
+<!-- 												<div class="form-group row"> -->
+<!-- 													<label class="col-sm-3 col-form-label" for="power">動力</label> -->
+<!-- 													<div class="col-sm-4"> -->
+<!-- 														<div class="form-check"> -->
+<!-- 															<label class="form-check-label">  -->
+<!-- 															<input th:field="*{option.carModel.power}" class="form-check-input" type="radio"  -->
+<!-- 																id="automatic" name="power" value="燃油車" checked /> 燃油車 -->
+<!-- 															</label> -->
+<!-- 														</div> -->
 <!-- 													</div> -->
-<!-- 													<div class="col-sm-9"> -->
-<!-- 														<div class="custom-file"> -->
-<!-- 															<input type="file" class="form-control custom-file-input pb-1" -->
-<!-- 																name="carImage" id="carImage">  -->
-<!-- 															<label class="custom-file-label">選擇檔案</label> -->
+<!-- 													<div class="col-sm-5"> -->
+<!-- 														<div class="form-check"> -->
+<!-- 															<label class="form-check-label">  -->
+<!-- 															<input th:field="*{option.carModel.power}" class="form-check-input" type="radio"  -->
+<!-- 																id="manual" name="power" value="電動車" /> 電動車 -->
+<!-- 															</label> -->
 <!-- 														</div> -->
 <!-- 													</div> -->
 <!-- 												</div> -->
 <!-- 											</div> -->
-<!-- 											<div class="col-md-3"> -->
-<!-- 												<img th:src="@{*{image}}" class="rounded"/> -->
-<!-- 												<div class="row" id="formFileCar"></div> -->
+<!-- 											<div class="col-md-6"> -->
+<!-- 												<div class="form-group row"> -->
+<!-- 													<label class="col-sm-3 col-form-label" for="transmission">變速器</label> -->
+<!-- 													<div class="col-sm-4"> -->
+<!-- 														<div class="form-check"> -->
+<!-- 															<label class="form-check-label">  -->
+<!-- 															<input th:field="*{option.carModel.transmission}" class="form-check-input" type="radio"  -->
+<!-- 																id="automatic" name="transmission" value="AT" /> 自排 -->
+<!-- 															</label> -->
+<!-- 														</div> -->
+<!-- 													</div> -->
+<!-- 													<div class="col-sm-5"> -->
+<!-- 														<div class="form-check"> -->
+<!-- 															<label class="form-check-label">  -->
+<!-- 															<input th:field="*{option.carModel.transmission}" class="form-check-input" type="radio"  -->
+<!-- 																	id="manual" name="transmission" value="MT" /> 手排 -->
+<!-- 															</label> -->
+<!-- 														</div> -->
+<!-- 													</div> -->
+<!-- 												</div> -->
 <!-- 											</div> -->
 <!-- 										</div> -->
-										<div class="d-flex justify-content-end">
-											<button id="btn-insert" type="submit" class="btn btn-primary mr-2 justify-content-end mr-4">
-												儲存資料
-											</button>
-											<a class="btn btn-light justify-content-end" th:href="@{/backend/cars}">
-												回上一頁
-											</a>
-										</div>
-									</form>
+<!-- 										<div class="row"> -->
+<!-- 											<div class="col-md-6"> -->
+<!-- 												<div class="form-group row"> -->
+<!-- 													<label class="col-sm-3 col-form-label" for="engine">引擎排氣量</label> -->
+<!-- 													<div class="col-sm-9"> -->
+<!-- 														<input th:field="*{option.carModel.engine}" id="engine" type="number" class="form-control" min="1" /> -->
+<!-- 														<div class="invalid-feedback">請輸入引擎排氣量</div> -->
+<!-- 													</div> -->
+<!-- 												</div> -->
+<!-- 											</div> -->
+<!-- 										</div> -->
+<!-- 								</div> -->
+								
+<!-- 								<div class="row"> -->
+<!-- 									<div class="col-lg-3"></div> -->
+<!-- 									<div class="col-lg-9" id="carModelInfo"></div> -->
+<!-- 								</div> -->
+								<div class="d-flex justify-content-end">
+									<button id="btn-insert" type="submit" class="btn btn-warning mr-2 justify-content-end mr-4">
+										儲存資料
+									</button>
 								</div>
-							</div>
+							</form>
 						</div>
+					</div>
+				</div>
 			</div>
-
 		</div>
 	</div>
 
@@ -217,7 +314,44 @@
 	
 	<script th:src="@{/js/tw-city-selector.min.js}"></script>
 	<script>
-	  new TwCitySelector();
+// 	  	new TwCitySelector();
+
+		 new TwCitySelector({
+		    el: '.city-selector-set',
+		    elCounty: '.county', // 在 el 裡查找 element
+		    elDistrict: '.district', // 在 el 裡查找 element
+		    elZipcode: '.zipcode' // 在 el 裡查找 element
+		  });
+	  	
+		$('#carModel').on('change', function(){
+	  		let carModelId = $(this).val();
+			$.ajax({
+				type: 'GET',
+				url: '/gotrip/api/cars/models/' + carModelId,
+				dataType: 'json',
+				success: function(data) {
+// 					let str = '<i class="zmdi zmdi-flash"></i> <span th:text="${option.carModel.power}" class="p-r-15"></span>'+
+// 						'<i class="zmdi zmdi-wb-auto"></i> 變速 <span th:text="${option.carModel.transmission}" class="p-r-15"></span>'+
+// 						'<i class="zmdi zmdi-airline-seat-recline-extra"></i> 座位 <span th:text="${option.carModel.seat}" class="p-r-15"></span>'+
+// 						<i class="zmdi zmdi-car"></i> 排氣量 <span th:text="${option.carModel.engine}+'cc'" class="p-r-5"></span> ';
+					$("#carModelInfo").html(str);
+				},
+				error: function() {
+					console.log('error')
+				}
+			})
+			
+		})
+		
+		$('#btn-addModel').on('click', function() {
+			
+		})
+		
+// 		let test = $('#test').text();
+// 		console.log(test)
+// 		let test2 = $('#test2').text();
+// 		console.log(test2)
+		
 	</script>
 
 </body>
