--- a/src/main/resources/templates/frontend/car-location.html
+++ b/src/main/resources/templates/frontend/car-location.html
@@ -8,13 +8,15 @@
   <header th:replace="frontend/partials/fragment :: header"></header>
 	<!-- Cart 購物車 -->
 	<div th:replace="frontend/partials/fragment :: cart"></div>
-	
+	<section class="bg-img1 txt-center p-lr-15 p-tb-92"	th:style="'background-image: url(' + @{/images/bg-02.jpg} + ');'">
+		<h2 class="ltext-103 font-weight-bold clwhite txt-center">租車自駕</h2>
+	</section>
 	<!-- Product 內文 -->
 	<div class="bg0 m-t-60 m-b-140">
 		<div class="container">
 			
 			<div class="flex-w flex-sb-m m-b-40">
-				<h2 class="ltext-103 cl5 font-weight-bold p-b-15">租車自駕</h2>
+				<h2 class="ltext-103 cl5 font-weight-bold p-b-15">地圖找車</h2>
 				<div class="flex-w flex-l-m filter-tope-group m-tb-10">
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" data-filter="*">
 						所有租車選項
@@ -31,8 +33,7 @@
 				</div>
 
 				<div class="flex-w flex-c-m m-tb-5">
-					<a class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3  m-tb-4"
-						th:href="@{/cars}">
+					<a class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3 m-tb-4" th:href="@{/cars}">
 						以車款查詢
 					</a>
 				</div>
@@ -55,62 +56,58 @@
 						<div class="card d-block">
 							<div class="row ">
 								<div class="col-sm-4">
-									<div class="px-3 pos-relative hov-img0 card-img-left">
-										<img th:src="@{/data/uploadimages/car/toyota-yaris.jpg}" class="mt-4 pt-3" alt="IMG-CAR">
+									<div class="pos-relative hov-img0 card-img-left">
+										<img th:src="@{/data/uploadimages/car/default-map.jpg}" class="" alt="IMG-CAR">
 									</div>
 								</div>
 								<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14">
-									<div class="block2-txt-child1 mb-4">
+									<div class="block2-txt-child1">
 										<div>
-											<span class="" th:text="${location.city}"></span>
+											<span class="m-t-4" th:text="${location.county}"></span>
 											<i class="fa fa-angle-right" aria-hidden="true"></i>
 											<span class="" th:text="${location.district}"></span>
 										</div>
-										<a th:href="@{'/cars/'+${location.id}}" class="fs-24 clblack font-weight-bold hov-cl1 trans-04 js-name-b2">
-											<p th:text="${location.name}" class="pr-3 m-tb-10"></p>
-										</a>
+											<p th:text="${location.name}" class="pr-3 m-tb-8 fs-24 clblack font-weight-bold trans-04 js-name-b2"></p>
 										<i class="fa fa-map-marker cl3" aria-hidden="true"></i>
-										<span th:text="${location.city + location.district + location.address}"></span>
+										<span th:text="${location.county + location.district + location.address}"></span>
 <!-- 										<div class="rating-count" th:id="${car.id}" value="carRental"> -->
 <!-- 											尚無評論 -->
 <!-- 										</div> -->
-										<button class="btn btn-primary text-right" type="button" data-toggle="collapse" th:data-target="'#collapseExample'+${location.id}" aria-expanded="false" aria-controls="collapseExample">
-											<i class="fa fa-angle-down" aria-hidden="true"></i>
-										</button>
-										
+										<div class="flex-r">
+											<button class="btn btn-warning text-right" type="button" data-toggle="collapse" th:data-target="'#collapseExample'+${location.id}" aria-expanded="false" aria-controls="collapseExample">
+												<i class="fa fa-angle-down" aria-hidden="true"></i>
+											</button>
+										</div>
 									</div>
 								</div>
 							</div>
-							<div class="collapse p-all-20" th:id="'collapseExample'+${location.id}">
+							<div class="collapse p-lr-20" th:id="'collapseExample'+${location.id}">
 								<div th:each="option:${location.carOptions}" >
-									<div class="bor18">
-										<div class="row ">
-											<div class="col-sm-4 ">
+									<div class="bor18 ">
+										<div class="row">
+											<div class="col-sm-4">
 												<div class="px-3 pos-relative hov-img0 card-img-left ">
-													<img th:src="@{${option.carModel.image}}" class="mt-4 pt-3" alt="IMG-CAR">
+													<img th:src="@{${option.carModel.image}}" class="mt-5" alt="IMG-CAR">
 												</div>
 											</div>
-											<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14">
-												<div class="block2-txt-child1 mb-4">
-													<p th:text="${option.carModel.type}"></p>
-													<a th:href="@{'/cars/'+${option.carModel.id}}" class="fs-20 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
+											<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14 ">
+												<div class="block2-txt-child1 mb-1">
+													<p class="m-t-15" th:text="${option.carModel.type}"></p>
+													<a th:href="@{'/cars/'+${option.carModel.id}}" class="fs-20 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-15">
 														<p th:text="${option.carModel.makeCh + ' ' + option.carModel.makeEn + ' ' + option.carModel.model}" class="pr-3"></p>
 													</a>
 													<div class="rating-count" th:id="${option.carModel.id}" value="carRental">
 														尚無評論
 													</div>
-													<p class="clblack mtext-101 p-t-6 text-right" th:each="option:${carOptions}">
-														TWD $<span th:text="${option.price}"></span>
-													</p>
-<!-- 										<i class="zmdi zmdi-flash"></i> -->
-<!-- 										<span th:text="${car.power}" class="pr-3"></span> -->
-<!-- 										變速  -->
-<!-- 										<span th:text="${car.transmission}" class="pr-3"></span> -->
-<!-- 										座位  -->
-<!-- 										<i class="zmdi zmdi-airline-seat-recline-extra"></i> -->
-<!-- 										<span th:text="${car.seat}" class="pr-3"></span> -->
-<!-- 										排氣  -->
-<!-- 										<span th:text="${car.displacement}" class="pr-3"></span> -->
+													<i class="zmdi zmdi-flash"></i> <span th:text="${option.carModel.power}" class="p-r-15"></span>
+													<i class="zmdi zmdi-wb-auto"></i> 變速 <span th:text="${option.carModel.transmission}" class="p-r-15"></span>
+													<i class="zmdi zmdi-airline-seat-recline-extra"></i> 座位 <span th:text="${option.carModel.seat}" class="p-r-15"></span>
+													<i class="zmdi zmdi-car"></i> 排氣量 <span th:text="${option.carModel.engine}+'cc'" class="p-r-5"></span> 
+													<div class="p-t-6 text-right">
+														<del><span class="cl3" th:text="'TWD $' + ${option.price}"></span></del>
+														<span class="clblack mtext-109" th:text="'TWD $' + ${option.priceSale}"></span>
+														<button class="ml-3 btn btn-warning">選擇車款</button>
+													</div>
 												</div>
 											</div>
 										</div>
