--- a/src/main/resources/templates/frontend/car.html
+++ b/src/main/resources/templates/frontend/car.html
@@ -8,13 +8,15 @@
   <header th:replace="frontend/partials/fragment :: header"></header>
 	<!-- Cart 購物車 -->
 	<div th:replace="frontend/partials/fragment :: cart"></div>
-	
+	<section class="bg-img1 txt-center p-lr-15 p-tb-92"	th:style="'background-image: url(' + @{/images/bg-02.jpg} + ');'">
+		<h2 class="ltext-103 font-weight-bold clwhite txt-center">租車自駕</h2>
+	</section>
 	<!-- Product 內文 -->
 	<div class="bg0 m-t-60 p-b-140">
 		<div class="container">
 			
 			<div class="flex-w flex-sb-m p-b-52">
-				<h2 class="ltext-103 cl5 font-weight-bold p-b-15">租車自駕</h2>
+				<h2 class="ltext-103 cl5 font-weight-bold p-b-15">車款找車</h2>
 				<div class="flex-w flex-l-m filter-tope-group m-tb-10">
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" data-filter="*">
 						所有租車選項
@@ -70,15 +72,10 @@
 										<p class="clblack mtext-101 p-t-6 text-right" th:each="option:${carOptions}">
 											TWD $<span th:text="${car.carOptions.price}"></span>
 										</p>
-										<i class="zmdi zmdi-flash"></i>
-										<span th:text="${car.power}" class="pr-3"></span>
-										變速 
-										<span th:text="${car.transmission}" class="pr-3"></span>
-										座位 
-										<i class="zmdi zmdi-airline-seat-recline-extra"></i>
-										<span th:text="${car.seat}" class="pr-3"></span>
-										排氣 
-										<span th:text="${car.displacement}" class="pr-3"></span>
+										<i class="zmdi zmdi-flash"></i> <span th:text="${car.power}" class="p-r-15"></span>
+										<i class="zmdi zmdi-wb-auto"></i> 變速 <span th:text="${car.transmission}" class="p-r-15"></span>
+										<i class="zmdi zmdi-airline-seat-recline-extra"></i> 座位 <span th:text="${car.seat}" class="p-r-15"></span>
+										<i class="zmdi zmdi-car"></i> 排氣量 <span th:text="${car.engine}+'cc'" class="p-r-5"></span>
 									</div>
 
 								</div>
