--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -96,7 +96,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->
 			<div class="logo-mobile">
-				<a href="index.html"><img th:src="@{images/icons/logo-GoTrip.png}" alt="IMG-LOGO"></a>
+				<a href="index.html"><img th:src="@{/images/icons/logo-GoTrip.png}" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
@@ -166,7 +166,7 @@
 		<div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
 			<div class="container-search-header">
 				<button class="flex-c-m btn-hide-modal-search trans-04 js-hide-modal-search">
-					<img th:src="@{images/icons/icon-close2.png}" alt="CLOSE">
+					<img th:src="@{/images/icons/icon-close2.png}" alt="CLOSE">
 				</button>
 
 				<form class="wrap-search-header flex-w p-l-15">
@@ -214,7 +214,7 @@
 
 					<li class="header-cart-item flex-w flex-t m-b-12">
 						<div class="header-cart-item-img">
-							<img th:src="@{images/tickets/theme_park_1.jpg}" alt="IMG">
+							<img th:src="@{/images/tickets/theme_park_1.jpg}" alt="IMG">
 						</div>
 
 						<div class="header-cart-item-txt p-t-8">
@@ -636,7 +636,7 @@
 								<div class="wrap-slick3-arrows flex-sb-m flex-w"></div>
 
 								<div class="slick3 gallery-lb">
-									<div class="item-slick3" data-thumb="images/product-detail-01.jpg">
+									<div class="item-slick3" th:data-thumb="@{/images/product-detail-01.jpg}">
 										<div class="wrap-pic-w pos-relative">
 											<img th:src="@{/images/product-detail-01.jpg}" alt="IMG-PRODUCT">
 
@@ -647,7 +647,7 @@
 										</div>
 									</div>
 
-									<div class="item-slick3" data-thumb="images/product-detail-02.jpg">
+									<div class="item-slick3" th:data-thumb="@{/images/product-detail-02.jpg}">
 										<div class="wrap-pic-w pos-relative">
 											<img th:src="@{/images/product-detail-02.jpg}" alt="IMG-PRODUCT">
 
@@ -658,7 +658,7 @@
 										</div>
 									</div>
 
-									<div class="item-slick3" data-thumb="images/product-detail-03.jpg">
+									<div class="item-slick3" th:data-thumb="@{/images/product-detail-03.jpg}">
 										<div class="wrap-pic-w pos-relative">
 											<img th:src="@{/images/product-detail-03.jpg}" alt="IMG-PRODUCT">
 
